# LearningSDL

./: README.md
2d_shoot_em_up/: CMakeLists.txt  README.md
2d_shoot_em_up/output/: main
2d_shoot_em_up/src/: defs.h  draw.c  draw.h  init.c  init.h  input.c  input.h  main.c  main.h  stage.c  struct.h
SDL_sprite/output/: main
SDL_triangle/: Makefile  main.c
SDL_triangle/output/: main
SDL_triangle_vita/: CMakeLists.txt  main.c
SDL_window/: Makefile  main.c
SDL_window/output/: main
SDL_window_vita/: CMakeLists.txt
